--- a/#Day2-Piano Application/index.html
+++ b/#Day2-Piano Application/index.html
@@ -10,7 +10,7 @@
     <h1>Piano</h1>
     <div class="wrapper">
         <div class="piano">
-            <div data-note="c" class="key white">
+            <div data-note="C" class="key white">
                 <span class="note-label">C</span>
                 <audio src="notes/C.mp3" id="C"></audio>
             </div>
