--- a/#Day3-Text to Voice/index.html
+++ b/#Day3-Text to Voice/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Text to Voice App</h1>
+        <textarea class="text" rows="6" placeholder="Type text here..."></textarea>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
