--- a/#Day3-Text to Voice/index.html
+++ b/#Day3-Text to Voice/index.html
@@ -10,6 +10,7 @@
     <div class="container">
         <h1>Text to Voice App</h1>
         <textarea class="text" rows="6" placeholder="Type text here..."></textarea>
+        <button type="button" onclick="textToAudio">Let's Speak</button>
     </div>
     <script src="script.js"></script>
 </body>
